# Supera

./: .gitignore  FMWKInterface.h  GenRandom.h  ImageMetaFromConfig.cxx  ImageMetaFromConfig.h  ImageMetaMaker.cxx  ImageMetaMaker.h  ImageMetaMakerBase.cxx  ImageMetaMakerBase.h  ImageMetaMakerFactory.cxx  Instance2Image.cxx  Instance2Image.h  LAr2Image.cxx  LAr2Image.h  LArCVMetaData.h  LArCVMetaMaker.h  LArCVMetaMaker_service.cc  LArCVSuperaDriver.cxx  LArCVSuperaDriver.h  LArSoftSuperaDriver_module.cc  MCParticleHelper.cxx  MCParticleHelper.h  MCParticleList.cxx  MCParticleList.h  MCParticleTree.cxx  MCParticleTree.h  ParamsChStatus.cxx  ParamsChStatus.h  ParamsParticle.cxx  ParamsPixel2D.cxx  ParamsROI.cxx  ParamsROI.h  ParamsVoxel3D.cxx  PulledPork3DSlicer.cxx  PulledPork3DSlicer.h  README.md  RSEFilter_module.cc  RecoVoxel3D.h  SBND_notes.md  SegLabelGhost.cxx  (+72 more)
MultiPartGenerators/: CMakeLists.txt  MultiPartVertex_module.cc  multipartvertex_pdune.fcl
arxiv/: ImageMetaFromConfig.cxx  ImageMetaMaker.h  LAr2Image.cxx  LAr2Image.h  MCOriginTree.cxx  MCOriginTree.h  MCParticleHelper.cxx  MCParticleHelper.h  MCParticleTree.cxx  MCParticleTree.h  ParamsImage2D.cxx  ParamsImage2D.h  ParamsParticle.h  ParamsPixel2D.cxx  ParamsPixel2D.h  ParamsVoxel3D.h  PulledPork3DSlicer.cxx  PulledPork3DSlicer.h  Range.h  SuperaBBoxBase.cxx  SuperaBBoxBase.h  SuperaChStatus.cxx  SuperaHit.cxx  SuperaKeyPointCluster.cxx  SuperaKeyPointCluster.h  SuperaMCPCluster.cxx  SuperaMCParticle.cxx  SuperaMCParticle.h  SuperaMCROI.cxx  SuperaSimVoxel3D.cxx  SuperaToyBetter.cxx  SuperaToyExtra.cxx  VPlaneHandler_module.cc  Voxel3DSlicer.cxx  supera_basic.fcl  supera_basic_calmod.fcl  supera_mc_focused_2gen.fcl  supera_mc_only3d_2gen.fcl  supera_michel_focused.fcl  supera_michel_mc_focused.fcl  (+2 more)
dev/: dlprod_fclbase_analyzers.fcl  segment_driver.fcl  supera_segment.fcl
devel/: MCParticleHelper.cxx  MCParticleHelper.h  SuperaMCParticle.cxx  SuperaMCParticle.h
example_drivers/: README  dldata_larlite_supera.fcl  dldata_larlite_supera_calmod.fcl  dlmc_bnb_nu_larlite_supera.fcl  project_supera_bnb_nu_foroverlay.xml  project_supera_extunbiased.xml  supera_basic.fcl  supera_basic_calmod.fcl  supera_mcexample_calmod.fcl
experiments/icarus/: CMakeLists.txt  ExperimentTypes.h  FMWKInterface.cxx
experiments/pdune/: CMakeLists.txt
experiments/uboone/: CMakeLists.txt  ExperimentTypes.h  FMWKInterface.cxx  FMWKInterface.h
ignore/: dldata_larlite_supera_calmod.fcl  mc_segment_supera.fcl  test_supera.fcl
job/: CMakeLists.txt  README.md  gen_singlep.fcl  kazu.fcl  modified_MPVMPR_supera.fcl  run_MPVMPR_supera.fcl  run_cluster_sbnd.fcl  run_corsika.fcl  run_g4_sbnd.fcl  run_g4_sbnd_lite.fcl  run_g4_sbnd_lite_dropsed.fcl  run_icaursMC_supera.fcl  run_larsoft_reco_supera_3d.fcl  run_larsoft_sim_mpvmpr_3d.fcl  run_larsoft_sim_singles_3d.fcl  run_larsoft_supera_electron.fcl  run_larsoft_supera_gamma.fcl  run_larsoft_supera_mc_3d.fcl  run_larsoft_supera_mpvmpr_3d.fcl  run_larsoft_supera_muon.fcl  run_larsoft_supera_pion.fcl  run_larsoft_supera_proton.fcl  run_mpvmpr.fcl  run_mpvmpr_g4_sbnd.fcl  run_mpvmpr_sbnd.fcl  run_mpvmpr_sbnd_dropemdaughter.fcl  run_mpvmpr_sbnd_muon.fcl  run_mpvmpr_sbnd_stopmuon.fcl  run_nue.fcl  run_nue_ccqe.fcl  run_numu.fcl  run_supera.fcl  run_supera_mc_3d.fcl  run_supera_sbn_corsika.fcl  run_supera_sbn_mpvmpr.fcl  run_supera_sbnd.fcl  run_supera_sbnd_corsika.fcl  run_supera_sbnd_mpvmpr.fcl  run_supera_toy.fcl  supera_corsika.fcl  (+13 more)
job/data/: README.md  icarus_supera_data.fcl  icarus_supera_data_larsoft.fcl  supera_data.fcl  supera_data_cryoE.fcl  supera_data_cryoW.fcl
job/include/: README.md  icarus_supera_data_all_cryo.fcl  icarus_supera_data_cryoE.fcl  icarus_supera_data_cryoW.fcl  sam_supera.fcl  supera_icarus_MC_MPVMPR_cryoE_PMT_CRT.fcl  supera_icarus_MC_all_cryo.fcl  supera_icarus_MC_all_cryo_PMT_CRT.fcl  supera_icarus_MC_cryoE.fcl  supera_icarus_MC_cryoE_PMT_CRT.fcl  supera_icarus_MC_cryoW.fcl  supera_icarus_MC_cryoW_PMT_CRT.fcl  supera_icarus_cosmgen_all_cryo.fcl  supera_icarus_cosmgen_all_cryo_PMT_CRT.fcl  supera_icarus_cosmgen_cryoE.fcl  supera_icarus_cosmgen_cryoE_PMT_CRT.fcl  supera_icarus_cosmgen_cryoW.fcl  supera_icarus_cosmgen_cryoW_PMT_CRT.fcl  supera_icarus_generator_all_cryo.fcl  supera_icarus_generator_all_cryo_PMT_CRT.fcl  supera_icarus_generator_cryoE.fcl  supera_icarus_generator_cryoE_PMT_CRT.fcl  supera_icarus_generator_cryoW.fcl  supera_icarus_generator_cryoW_PMT_CRT.fcl  supera_modules.fcl
job/pdune/: run_mpv_pdune.fcl  run_pdune.fcl  run_pdune_electron.fcl  run_pdune_muon.fcl  run_pdune_proton.fcl  run_pdune_singles.fcl  supera_pdune_mc.fcl  supera_pdune_mc_mpv.fcl
job/stages/: icarus_supera_common.fcl  icarus_supera_detsim.fcl  icarus_supera_g4.fcl  icarus_supera_genie_nue.fcl  icarus_supera_genie_numu.fcl  icarus_supera_reco.fcl  icarus_supera_simreco.fcl  supera_old_simreco.fcl
job/test_production/: README.md  test_supera.fcl  test_supera_detsim.fcl  test_supera_g4.fcl  test_supera_genie.fcl  test_supera_mcreco.fcl  test_supera_stage0.fcl  test_supera_stage1.fcl
larlite/: FMWKInterface.cxx
